letstalk spacing fix

--- a/components/letstalk.module.css
+++ b/components/letstalk.module.css
@@ -68,6 +68,9 @@
 }
 
 @media (max-width: 1023px) {
+	.letstalk {
+		margin: 2rem 0 1rem 0;
+	}
 	.decoration {
 		width: 44px;
 		top: -1.5rem;
@@ -79,6 +82,9 @@
 }
 
 @media (max-width: 639px) {
+	.letstalk {
+		margin-top: 1.5rem;
+	}
 	.decoration {
 		width: 36px;
 		top: -1.125rem;
